<resources>
    <string name="app_name">Calculator</string>
    <string name="Zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">\u002b</string>
    <string name="minus">\u2212</string>
    <string name="division">\u00F7</string>
    <string name="multiply">\u00D7</string>
    <string name="equal">\u003D</string>
    <string name="twoZeros">00</string>
    <string name="decimal">\u002E</string>
    <string name="clear">C</string>
    <string name="backspace">\u232b</string>
    <string name="memoryClear">MC</string>
    <string name="memoryAdd">M+</string>
    <string name="memorySubtract">M-</string>
    <string name="memoryRecall">MR</string>
    <string name="negative">+/-</string>
    <string name="undo">\u21B6</string>
</resources>