<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:backgroundTint="@color/black"
        android:gravity="center|right"
        android:maxLength="15"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="65"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/memoryClear"
                android:textColor="@color/teal_200"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/memoryAdd"
                android:textColor="@color/teal_200"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/memorySubtract"
                android:textColor="@color/teal_200"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/memoryRecall"
                android:textColor="@color/teal_200"
                android:textSize="26sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/clear"
                android:textColor="@color/teal_200"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/mod"
                android:textColor="@color/teal_200"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/backspace"
                android:textColor="@color/teal_200"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/division"
                android:textColor="@color/teal_200"
                android:textSize="26sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/seven"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/eight"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/nine"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button12"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/multiply"
                android:textColor="@color/teal_200"
                android:textSize="26sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button13"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/four"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button14"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/five"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button15"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/six"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button16"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/minus"
                android:textColor="@color/teal_200"
                android:textSize="26sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button17"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button18"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/two"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button19"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/three"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button20"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/plus"
                android:textColor="@color/teal_200"
                android:textSize="26sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button21"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/twoZeros"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button22"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/Zero"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button23"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/decimal"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button24"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_white"
                android:text="@string/equal"
                android:textColor="@color/teal_200"
                android:textSize="26sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>